--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -36,5 +36,11 @@
             <version>5.8.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
