--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -42,5 +42,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+        </dependency>
     </dependencies>
 </project>
