--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>testng</artifactId>
             <version>7.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.1</version>
+        </dependency>
     </dependencies>
 </project>
