--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -52,5 +52,15 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
