--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -52,5 +52,15 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.21.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
     </dependencies>
 </project>
