Hier kommt die Sonne
Fixed message bug

--- a/Server-Side/pom.xml
+++ b/Server-Side/pom.xml
@@ -101,7 +101,11 @@
         </dependency>
 
 
-
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.13.0</version> <!-- Update this to match the ANTLR version used by the plugin -->
+        </dependency>
 
     </dependencies>
 </project>
